--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -9,9 +9,7 @@
     <title>A Music web player, that does more for you! - Moodify | Corebell</title>
 </head>
 <nav>
-    <a class="nav-link" href="/"><img src="/data/images/Moodify_Logo.png" align="left" alt="Moodify Logo"></a>
-    <a class="nav-link" href="/pages/downloads/">Downloads</a>
-    <a class="nav-link" href="/pages/games/">Games</a>
+    <a class="nav-link" href="/"><img src="/data/images/Rendani_Logo.png" align="left" alt="Rendani's Logo"></a>
     <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
