--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -135,15 +135,13 @@
     </script>
 </head>
 <body>
-    <nav>
-        <a class="nav-link" href="/"><img src="/data/images/NinaAI_Logo.png" align="left" alt="Nina Logo"></a>
-        <a class="nav-link" href="/pages/downloads/">Downloads</a>
-        <a class="nav-link" href="/pages/games/">Games</a>
-        <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
-        <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
-        <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
-        <a class="nav-link" href="/pages/blog/">Blog</a>
-    </nav>
+<nav>
+    <a class="nav-link" href="/"><img src="/data/images/Rendani_Logo.png" align="left" alt="Rendani's Logo"></a>
+    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+    <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
+    <a class="nav-link" href="/pages/blog/">Blog</a>
+</nav>
     <hr>
 
     <h2 align="center">Code, Plan, Imagine and Create with Nina!</h2>
