--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Explore, Code and Listen to music | Corebell</title>
 </head>
 <nav>
-    <a class="nav-link" href="/"><img src="/data/images/Rendani_Logo.png" align="left" alt="Rendani's Logo"></a>
-    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+    <a class="nav-link" href="/"><img src="/data/images/Blog_Logo.png" align="left" alt="Blog's Logo"></a>
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
     <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
     <a class="nav-link" href="/pages/blog/">Blog</a>
 </nav>
