--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -97,6 +97,13 @@
     }
   </style>
 </head>
+  <nav>
+    <a class="nav-link" href="/"><img src="/data/images/Blog_Logo.png" align="left" alt="Blog's Logo"></a>
+    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+    <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
+    <a class="nav-link" href="/pages/blog/">Blog</a>
+</nav>
 <body>
   <!-- Loading Screen -->
   <div id="loading-screen">Loading Corebell Engine...</div>
