--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -39,10 +39,10 @@
 <hr>
 <footer>
     <ul>
-    <h3>All links</h3>
-    <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email Me</a>
-    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni">Sponsor Me</a>
-    <a target="_blank" class="nav-link" href="https://github.com/manugeni">My GitHub</a>
+    <h3>Links</h3>
+    <a target="_blank" class="nav-link" href="https://linktr.ee/callmerendani">Linktree</a>
+    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni">Sponsor Me on GitHub</a>
+    <a target="_blank" class="nav-link" href="https://github.com/manugeni">GitHub</a>
     <h3>Apps</h3>
     <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
     <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
