--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="referrer" content="strict-origin">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <title>Explore, Code and Listen to music | Corebell</title>
+    <title>Explore | Rendani</title>
 </head>
 <nav>
     <a class="nav-link" href="/"><img src="/data/images/Rendani_Logo.png" align="left" alt="Rendani's Logo"></a>
@@ -17,7 +17,7 @@
 </nav>
 <hr>
 <body>
-    <h2 style="text-align: center;">Welcome!</h2>
+    <h2 style="text-align: center;">Welcome</h2>
 </body>
 <hr>
 <footer>
@@ -32,5 +32,5 @@
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     </ul>
 </footer>
-        <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
+        <p style="text-align: center;"> 2025 &copy Rendani.</p>
 </html>
