--- a/pages/apps/index.html
+++ b/pages/apps/index.html
@@ -21,5 +21,5 @@
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     </ul>
 </footer>
-        <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
+        <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
 </html>
