--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -6,7 +6,7 @@
     <meta name="referrer" content="strict-origin">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <title>Code, Plan, Imagine and Create - Nina AI | Corebell</title>
+    <title>Code, Plan and Create - Nina | Rendani</title>
     <style>
         .chat-widget {
             width: 90%;
@@ -168,6 +168,6 @@
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     </ul>
 </footer>
-    <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
+    <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
 </body>
 </html>
