--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -6,7 +6,7 @@
     <meta name="referrer" content="strict-origin">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <title>A Music web player, that does more for you! - Moodify | Corebell</title>
+    <title>A music web player made for you - Moodify | Rendani</title>
 </head>
 <nav>
     <a class="nav-link" href="/"><img src="/data/images/Rendani_Logo.png" align="left" alt="Rendani's Logo"></a>
@@ -49,5 +49,5 @@
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     </ul>
 </footer>
-        <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
+        <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
 </html>
