--- a/index.html
+++ b/index.html
@@ -32,5 +32,5 @@
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     </ul>
 </footer>
-        <p style="text-align: center;"> 2025 &copy Rendani.</p>
+        <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
 </html>
