--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="referrer" content="strict-origin">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <title>Explore | Rendani</title>
+    <title>Explore Corebell Engine, Moodify, Blogs and Nina AI Chat | Rendani</title>
 </head>
 <nav>
     <a class="nav-link" href="/"><img src="/data/images/Rendani_Logo.png" align="left" alt="Rendani's Logo"></a>
