--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="referrer" content="strict-origin">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
+    <script src="/data/js/main.js"></script>
     <title>Explore Corebell Engine, Moodify, Blogs and Nina AI Chat | Rendani</title>
 </head>
 <nav>
