--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -6,6 +6,7 @@
     <meta name="referrer" content="strict-origin">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
+    <script src="/data/js/main.js"></script>
     <title>A music web player made for you - Moodify | Rendani</title>
 </head>
 <nav>
