--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -6,6 +6,7 @@
     <meta name="referrer" content="strict-origin">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
+    <script src="/data/js/main.js"></script>
     <title>Code, Plan and Create - Nina | Rendani</title>
     <style>
         .chat-widget {
