--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -21,20 +21,68 @@
     <h2 align="center">Feeling moody? sit down and listen on Moodify!</h2>
     <hr>
     <div class="music-player">
-        <div class="player-controls">
-            <button class="player-pause-button">Play/Pause</button>
-            <button class="stop-button">Stop</button>
+        <div class="now-playing">
+            <img id="album-art" src="/data/images/default-album-art.png" alt="Album Art">
             <div class="track-info">
-                <h2 id="track-title"></h2>
-                <h3 id="track-artist"></h3>
-            </div>
-            <div class="track-list">
-                <ul id="track-list-ul">
-                    <!--Track list populated here-->
-                </ul>
+                <h2 id="track-title">Select a track</h2>
+                <h3 id="track-artist">Unknown Artist</h3>
+                <p id="album-name">Unknown Album</p>
             </div>
         </div>
+        
+        <div class="progress-container">
+            <span id="current-time">0:00</span>
+            <div class="progress-bar">
+                <div class="progress"></div>
+            </div>
+            <span id="duration">0:00</span>
+        </div>
+
+        <div class="player-controls">
+            <button class="control-button shuffle-button" title="Shuffle">
+                <i class="fas fa-random"></i>
+            </button>
+            <button class="control-button previous-button" title="Previous">
+                <i class="fas fa-step-backward"></i>
+            </button>
+            <button class="control-button player-pause-button" title="Play/Pause">
+                <i class="fas fa-play"></i>
+            </button>
+            <button class="control-button stop-button" title="Stop">
+                <i class="fas fa-stop"></i>
+            </button>
+            <button class="control-button next-button" title="Next">
+                <i class="fas fa-step-forward"></i>
+            </button>
+            <button class="control-button repeat-button" title="Repeat">
+                <i class="fas fa-redo"></i>
+            </button>
+        </div>
+
+        <div class="volume-controls">
+            <i class="fas fa-volume-down"></i>
+            <input type="range" id="volume-slider" min="0" max="100" value="70">
+            <i class="fas fa-volume-up"></i>
+        </div>
+
+        <div class="mood-selector">
+            <h3>Select Your Mood</h3>
+            <div class="mood-buttons">
+                <button class="mood-button" data-mood="happy">Happy</button>
+                <button class="mood-button" data-mood="relaxed">Relaxed</button>
+                <button class="mood-button" data-mood="energetic">Energetic</button>
+                <button class="mood-button" data-mood="melancholic">Melancholic</button>
+            </div>
+        </div>
+
+        <div class="track-list">
+            <h3>Playlist</h3>
+            <ul id="track-list-ul">
+                <!--Track list populated here-->
+            </ul>
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
     <script src="/data/js/moodify.js"></script>
 </body>
 <hr>
@@ -50,5 +98,5 @@
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     </ul>
 </footer>
-        <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
-</html>
+<p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
+    </html>
