--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -3,9 +3,231 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Corebell Engine</title>
+  <title>Interface | Corebell Engine v0.0.01</title>
   <style>
-    /* Styles remain the same as before */
+    :root {
+      --primary-bg: #1e1e1e;
+      --widget-bg: rgba(0, 0, 0, 0.8);
+      --text-color: #ffffff;
+      --button-bg: #444;
+      --button-hover: #666;
+      --accent-color: #007bff;
+    }
+
+    body {
+      margin: 0;
+      overflow: hidden;
+      background-color: var(--primary-bg);
+      color: var(--text-color);
+      font-family: 'Inter', system-ui, -apple-system, sans-serif;
+    }
+
+    #viewport {
+      width: 100%;
+      height: 100vh;
+    }
+
+    .loading-screen {
+      position: fixed;
+      inset: 0;
+      background-color: var(--primary-bg);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .loading-screen img {
+      width: 200px;
+      margin-bottom: 1rem;
+    }
+
+    .loading-progress {
+      width: 200px;
+      height: 4px;
+      background: var(--widget-bg);
+      border-radius: 2px;
+      margin-top: 1rem;
+    }
+
+    .loading-bar {
+      width: 0%;
+      height: 100%;
+      background: var(--accent-color);
+      border-radius: 2px;
+      transition: width 0.3s ease;
+    }
+
+    .widget {
+      position: absolute;
+      background-color: var(--widget-bg);
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      color: var(--text-color);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: transform 0.2s ease;
+    }
+
+    .widget:hover {
+      transform: translateY(-2px);
+    }
+
+    .toolbar {
+      top: 1rem;
+      left: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .toolbar img {
+      width: 40px;
+      height: 40px;
+    }
+
+    .controls {
+      top: 1rem;
+      right: 1rem;
+    }
+
+    .properties {
+      bottom: 1rem;
+      left: 1rem;
+    }
+
+    .performance {
+      bottom: 1rem;
+      right: 1rem;
+    }
+
+    button {
+      background-color: var(--button-bg);
+      color: var(--text-color);
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      font-size: 0.9rem;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    button:hover {
+      background-color: var(--button-hover);
+      transform: translateY(-1px);
+    }
+
+    button:active {
+      transform: translateY(0);
+    }
+
+    .button-group {
+      display: flex;
+      gap: 0.5rem;
+      flex-wrap: wrap;
+    }
+
+    input[type="color"] {
+      width: 40px;
+      height: 40px;
+      padding: 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .properties-panel {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      gap: 0.5rem;
+      align-items: center;
+    }
+
+    .properties-panel input[type="number"] {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 4px;
+      padding: 0.25rem;
+      color: var(--text-color);
+      width: 80px;
+    }
+
+    .context-menu {
+      position: fixed;
+      background: var(--widget-bg);
+      border-radius: 4px;
+      padding: 0.5rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      z-index: 1000;
+      display: none;
+    }
+
+    .context-menu.active {
+      display: block;
+    }
+
+    .context-menu button {
+      display: block;
+      width: 100%;
+      text-align: left;
+      margin: 0.25rem 0;
+    }
+
+    .modal {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: var(--widget-bg);
+      padding: 1.5rem;
+      border-radius: 8px;
+      z-index: 1001;
+      display: none;
+    }
+
+    .modal.active {
+      display: block;
+    }
+
+    .modal-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 1000;
+      display: none;
+    }
+
+    .modal-overlay.active {
+      display: block;
+    }
+
+    .scene-hierarchy {
+      position: absolute;
+      left: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      max-height: 50vh;
+      overflow-y: auto;
+    }
+
+    .scene-hierarchy ul {
+      list-style: none;
+      padding-left: 1rem;
+    }
+
+    .scene-hierarchy li {
+      padding: 0.25rem 0;
+      cursor: pointer;
+    }
+
+    .scene-hierarchy li:hover {
+      color: var(--accent-color);
+    }
   </style>
   <!-- Preload critical assets -->
   <link rel="preload" href="/data/images/CorebellEngine_Logo.png" as="image">
@@ -22,7 +244,115 @@
 
   <div id="viewport"></div>
 
-  <!-- Toolbar, Controls, Properties, Performance widgets remain the same as before -->
+  <div class="widget toolbar">
+    <img src="/data/images/CorebellEngine_Logo.png" alt="Corebell Engine Logo">
+    <div class="button-group">
+      <button id="add-cube" title="Add Cube">
+        <span class="material-icons">cube</span>
+        Cube
+      </button>
+      <button id="add-sphere" title="Add Sphere">
+        <span class="material-icons">sphere</span>
+        Sphere
+      </button>
+      <button id="add-model" title="Import Model">
+        <span class="material-icons">file_upload</span>
+        Import
+      </button>
+    </div>
+  </div>
+
+  <div class="widget controls">
+    <div class="button-group">
+      <button id="transform" title="Transform Mode">
+        <span class="material-icons">open_with</span>
+      </button>
+      <button id="rotate" title="Rotate Mode">
+        <span class="material-icons">rotate_right</span>
+      </button>
+      <button id="scale" title="Scale Mode">
+        <span class="material-icons">transform</span>
+      </button>
+    </div>
+    <div class="control-options">
+      <input type="color" id="object-color" title="Object Color" value="#ff0000">
+      <input type="color" id="background-color" title="Background Color" value="#1e1e1e">
+    </div>
+  </div>
+
+  <div class="widget properties">
+    <h3>Properties</h3>
+    <div class="properties-panel">
+      <label>Position X:</label>
+      <input type="number" id="pos-x" step="0.1">
+      <label>Position Y:</label>
+      <input type="number" id="pos-y" step="0.1">
+      <label>Position Z:</label>
+      <input type="number" id="pos-z" step="0.1">
+      
+      <label>Rotation X:</label>
+      <input type="number" id="rot-x" step="0.1">
+      <label>Rotation Y:</label>
+      <input type="number" id="rot-y" step="0.1">
+      <label>Rotation Z:</label>
+      <input type="number" id="rot-z" step="0.1">
+      
+      <label>Scale X:</label>
+      <input type="number" id="scale-x" step="0.1" value="1">
+      <label>Scale Y:</label>
+      <input type="number" id="scale-y" step="0.1" value="1">
+      <label>Scale Z:</label>
+      <input type="number" id="scale-z" step="0.1" value="1">
+    </div>
+  </div>
+
+  <div class="widget performance">
+    <div id="stats"></div>
+    <div id="memory"></div>
+  </div>
+
+  <!-- Add Context Menu -->
+  <div class="context-menu" id="context-menu">
+    <button id="duplicate">Duplicate</button>
+    <button id="delete">Delete</button>
+    <button id="reset-transform">Reset Transform</button>
+    <button id="focus-camera">Focus Camera</button>
+  </div>
+
+  <!-- Add Modal for Settings -->
+  <div class="modal-overlay" id="settings-overlay"></div>
+  <div class="modal" id="settings-modal">
+    <h3>Engine Settings</h3>
+    <div class="properties-panel">
+      <label>Shadow Quality:</label>
+      <select id="shadow-quality">
+        <option value="low">Low</option>
+        <option value="medium">Medium</option>
+        <option value="high">High</option>
+      </select>
+
+      <label>Antialiasing:</label>
+      <select id="antialiasing">
+        <option value="none">None</option>
+        <option value="fxaa">FXAA</option>
+        <option value="msaa">MSAA</option>
+      </select>
+
+      <label>Physics Quality:</label>
+      <select id="physics-quality">
+        <option value="low">Low</option>
+        <option value="medium">Medium</option>
+        <option value="high">High</option>
+      </select>
+    </div>
+    <button id="close-settings">Close</button>
+  </div>
+
+  <!-- Scene Hierarchy -->
+  <div class="widget scene-hierarchy">
+    <h3>Scene Objects</h3>
+    <ul id="scene-tree"></ul>
+  </div>
 
   <script type="module">
     import { CorebellEngine, ObjectLibrary } from './api.js';
@@ -173,4 +503,4 @@
   <!-- Load Inter font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </body>
-</html>
+                                                  </html>
