--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -4,171 +4,51 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="referrer" content="strict-origin">
+    <meta name="description" content="Code, Plan, Imagine, and Create with Nina AI. Explore Rendani's projects and chat with Nina AI for assistance.">
+    <meta name="keywords" content="Nina AI, Rendani, Chatbot, AI, Coding, Planning, Creating">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <script src="/data/js/main.js"></script>
+    <link rel="stylesheet" href="/data/css/chat.css"> <!-- External CSS for chat widget -->
+    <script src="/data/js/main.js" defer></script>
+    <script src="/data/js/chat.js" type="module" defer></script> <!-- External JS for chat functionality -->
     <title>Code, Plan and Create - Nina | Rendani</title>
-    <style>
-        .chat-widget {
-            width: 90%;
-            max-width: 800px;
-            height: 600px;
-            margin: 20px auto;
-            border-radius: 8px;
-            background-color: #1e1e1e;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
-        }
-
-        .chat-header {
-            padding: 15px;
-            background-color: #333;
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-            color: #4caf50;
-        }
-
-        .chat-messages {
-            flex: 1;
-            padding: 15px;
-            overflow-y: auto;
-            background-color: #222;
-        }
-
-        .chat-input {
-            display: flex;
-            border-top: 1px solid #444;
-            background-color: #333;
-        }
-
-        .chat-input input {
-            flex: 1;
-            padding: 10px;
-            border: none;
-            background-color: #444;
-            color: white;
-            font-size: 14px;
-        }
-
-        .chat-input button {
-            padding: 10px;
-            border: none;
-            background-color: #4caf50;
-            color: white;
-            cursor: pointer;
-            font-size: 14px;
-        }
-
-        .chat-input button:hover {
-            background-color: #45a049;
-        }
-
-        .chat-message {
-            margin: 5px 0;
-            padding: 10px;
-            border-radius: 4px;
-            max-width: 70%;
-            word-wrap: break-word;
-        }
-
-        .chat-message.user {
-            background-color: #4caf50;
-            color: white;
-            align-self: flex-end;
-        }
-
-        .chat-message.bot {
-            background-color: #444;
-            color: white;
-            align-self: flex-start;
-        }
-
-        .chat-messages::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        .chat-messages::-webkit-scrollbar-thumb {
-            background: #4caf50;
-            border-radius: 4px;
-        }
-    </style>
-    <script type="module">
-        import { HfInference } from "https://cdn.jsdelivr.net/npm/@huggingface/inference/+esm";
-
-        const client = new HfInference("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");
-
-        async function sendMessage() {
-            const inputField = document.getElementById('chat-input');
-            const userInput = inputField.value.trim();
-
-            if (!userInput) return;
-
-            // Append user's message
-            appendMessage(userInput, 'user');
-            inputField.value = '';
-
-            try {
-                // Fetch response from Hugging Face Qwen model
-                const response = await client.chatCompletion({
-                    model: "Qwen/Qwen2.5-Coder-32B-Instruct",
-                    messages: [{ role: "user", content: userInput }],
-                    max_tokens: 500
-                });
-
-                const botReply = response.choices[0].message.content || "Sorry, I didn't understand that.";
-                appendMessage(botReply, 'bot');
-            } catch (error) {
-                appendMessage("Error: Unable to connect to AI service.", 'bot');
-            }
-        }
-
-        function appendMessage(message, sender) {
-            const chatMessages = document.getElementById('chat-messages');
-            const messageElem = document.createElement('div');
-            messageElem.className = `chat-message ${sender}`;
-            messageElem.textContent = message;
-            chatMessages.appendChild(messageElem);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
-        }
-    </script>
 </head>
 <body>
-<nav>
-    <a class="nav-link" href="/"><img src="/data/images/Rendani_Logo.png" align="left" alt="Rendani's Logo"></a>
-    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
-    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
-    <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
-    <a class="nav-link" href="/pages/blog/">Blog</a>
-</nav>
+    <nav>
+        <a class="nav-link" href="/" aria-label="Home">
+            <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo" align="left">
+        </a>
+        <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+        <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+        <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
+        <a class="nav-link" href="/pages/blog/">Blog</a>
+    </nav>
     <hr>
 
     <h2 align="center">Code, Plan, Imagine and Create with Nina!</h2>
 
     <div class="chat-widget">
         <div class="chat-header">Nina AI Chat</div>
-        <div class="chat-messages" id="chat-messages"></div>
+        <div class="chat-messages" id="chat-messages" role="log" aria-live="polite"></div>
         <div class="chat-input">
-            <input id="chat-input" type="text" placeholder="Type a message...">
-            <button onclick="sendMessage()">Send</button>
+            <input id="chat-input" type="text" placeholder="Type a message..." aria-label="Type your message">
+            <button onclick="sendMessage()" aria-label="Send message">Send</button>
         </div>
     </div>
 
     <hr>
-<footer>
-    <ul>
-    <h3>Links</h3>
-    <a target="_blank" class="nav-link" href="https://linktr.ee/callmerendani">Linktree</a>
-    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni">Sponsor Me on GitHub</a>
-    <a target="_blank" class="nav-link" href="https://github.com/manugeni">GitHub</a>
-    <h3>Apps</h3>
-    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
-    <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
-    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
-    </ul>
-</footer>
-    <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
+    <footer>
+        <ul>
+            <h3>Links</h3>
+            <a target="_blank" class="nav-link" href="https://linktr.ee/callmerendani" rel="noopener noreferrer">Linktree</a>
+            <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni" rel="noopener noreferrer">Sponsor Me on GitHub</a>
+            <a target="_blank" class="nav-link" href="https://github.com/manugeni" rel="noopener noreferrer">GitHub</a>
+            <h3>Apps</h3>
+            <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+            <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
+            <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+        </ul>
+    </footer>
+    <p style="text-align: center;">&copy; 2025 Rendani Manugeni.</p>
 </body>
-</html>
+                </html>
