--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -10,11 +10,16 @@
     <title>A music web player made for you - Moodify | Rendani</title>
 </head>
 <nav>
-    <a class="nav-link" href="/"><img src="/data/images/Rendani_Logo.png" align="left" alt="Rendani's Logo"></a>
+  <a class="nav-link" href="/" aria-label="Home">
+    <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo">
+  </a>
+  <div class="nav-menu">
     <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
     <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
     <a class="nav-link" href="/pages/blog/">Blog</a>
+  </div>
+  <div class="nav-toggle">&#9776;</div> <!-- Hamburger icon -->
 </nav>
 <hr>
 <body>
