--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -15,13 +15,16 @@
 </head>
 <body>
     <nav>
-        <a class="nav-link" href="/" aria-label="Home">
-            <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo" align="left">
-        </a>
-        <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
-        <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
-        <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
-        <a class="nav-link" href="/pages/blog/">Blog</a>
+  <a class="nav-link" href="/" aria-label="Home">
+    <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo">
+  </a>
+  <div class="nav-menu">
+    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+    <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
+    <a class="nav-link" href="/pages/blog/">Blog</a>
+  </div>
+  <div class="nav-toggle">&#9776;</div> <!-- Hamburger icon -->
     </nav>
     <hr>
 
